# randoku-sidecar

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  legacy_manual_verify_windows.py  operator_config.py  operator_cron.py  operator_memory.py  operator_policy.py  operator_skills.py  operator_workspace.py  pyproject.toml  server.py  start.sh  test_operator_config.py  test_operator_cron.py  test_operator_memory.py  test_operator_policy.py  test_operator_skills.py  test_operator_workspace.py  test_server.py  test_verify.py  vercel.json
docs/: ARCHITECTURE.md  ATTRIBUTION.md  CONSTITUTION.md  memory-writeback-audit.md  operator-mode.md  owner-mode-governance.md  public-issue-sanitization.md
docs/capabilities/: workspace_apply_diff.md  workspace_run_test.md  workspace_run_test_audit_plan.md
examples/: install-task.example.ps1  start-randoku-sidecar.example.ps1  status-randoku-sidecar.example.ps1
site/: app.js  index.html
