[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-gpt"
version = "0.2.0"
description = "Local-dev MCP sidecar for exposing selected Hermes Agent capabilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "hermes-gpt contributors" }
]
dependencies = [
  "mcp[cli]",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
hermes-gpt = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
