[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-gpt"
version = "0.2.0"
description = "Local-dev MCP sidecar for exposing selected Hermes Agent capabilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "hermes-gpt contributors" }
]
dependencies = [
  "mcp[cli]",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
hermes-gpt = "server:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "server",
  "operator_policy",
  "operator_cron",
  "operator_skills",
  "operator_config",
  "operator_workspace",
  "operator_memory",
]

[tool.setuptools.data-files]
"share/hermes-gpt" = [
  "README.md",
  "pyproject.toml",
  "CHANGELOG.md",
]
"share/hermes-gpt/docs" = [
  "docs/operator-mode.md",
  "docs/release-notes-v0.2.0.md",
]
"share/hermes-gpt/examples" = [
  "examples/start-hermes-gpt.example.ps1",
  "examples/status-hermes-gpt.example.ps1",
  "examples/install-task.example.ps1",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
