[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "randoku-sidecar"
version = "0.2.0"
description = "Local-dev MCP sidecar for exposing selected Hermes Agent capabilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "randoku-sidecar contributors" }
]
dependencies = [
  "mcp[cli]",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
randoku-sidecar = "server:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "server",
  "operator_policy",
  "operator_cron",
  "operator_skills",
  "operator_config",
  "operator_workspace",
  "operator_memory",
]

[tool.setuptools.data-files]
"share/randoku-sidecar" = [
  "README.md",
  "pyproject.toml",
  "CHANGELOG.md",
]
"share/randoku-sidecar/docs" = [
  "docs/operator-mode.md",
  "docs/release-notes-v0.2.0.md",
]
"share/randoku-sidecar/examples" = [
  "examples/start-randoku-sidecar.example.ps1",
  "examples/status-randoku-sidecar.example.ps1",
  "examples/install-task.example.ps1",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
